add reserve and update readme for stake transfer

--- a/.env.sample
+++ b/.env.sample
@@ -13,6 +13,20 @@ SAFETY_BALANCE=10.0
 # Example: 0.0001 TAO = $0.05 in slippage for $500 TAO
 SLIPPAGE_PRECISION=0.0001
 
+# Subnet settings for stake movement
+# The subnet ID to operate on (e.g., 19 for inference subnet)
+NETUID=19
+
+# The validator's hotkey to delegate stake to (e.g., MUV validator)
+VALIDATOR_HOTKEY=5DQ2Geab6G25wiZ4jGH6wJM8fekrm1QhV9hrRuntjBVxxKZm
+
+# The holding wallet name and address for secure storage
+HOLDING_WALLET_NAME=your-holding-wallet-name
+HOLDING_WALLET_ADDRESS=your-holding-wallet-ss58-address
+
+# Amount of alpha to keep in miner wallet (default: 0.0)
+# Example: Set to 100.0 to keep 100 alpha tokens in each miner wallet
+ALPHA_RESERVE_AMOUNT=100.0
+
 # Wallet passwords (optional)
 # Format: BT_PW__ROOT__BITTENSOR_WALLETS_<wallet-name>_COLDKEY=<password>
-BT_PW__ROOT__BITTENSOR_WALLETS_COLDKEY-01_COLDKEY=your-password-here 
