updated reserve example

--- a/.env.sample
+++ b/.env.sample
@@ -25,8 +25,8 @@ HOLDING_WALLET_NAME=your-holding-wallet-name
 HOLDING_WALLET_ADDRESS=your-holding-wallet-ss58-address
 
 # Amount of alpha to keep in miner wallet (default: 0.0)
-# Example: Set to 100.0 to keep 100 alpha tokens in each miner wallet
-ALPHA_RESERVE_AMOUNT=100.0
+# Example: Set to 10.0 to keep 10 alpha tokens in each miner wallet
+ALPHA_RESERVE_AMOUNT=10.0
 
 # Wallet passwords (optional)
 # Format: BT_PW__ROOT__BITTENSOR_WALLETS_<wallet-name>_COLDKEY=<password>
