add alpha harvest mode

--- a/.env.sample
+++ b/.env.sample
@@ -6,8 +6,12 @@ SUBTENSOR=finney
 BLOCK_TIME_SECONDS=12
 
 # Trading settings
-# Minimum TAO balance to maintain (default: 1.0)
-SAFETY_BALANCE=10.0
+# Minimum TAO balance to maintain in wallet (default: 1.0)
+DCA_RESERVE_TAO=10.0
+
+# Minimum alpha balance to maintain when unstaking (default: 1.0)
+# NOTE: the balance of TAO is kept by coldkey, not hotkey (hotkeys/coldkeys may have one-to-many relationships)
+DCA_RESERVE_ALPHA=10.0
 
 # Target slippage precision in TAO (default: 0.0001)
 # Example: 0.0001 TAO = $0.05 in slippage for $500 TAO
@@ -25,8 +29,8 @@ HOLDING_WALLET_NAME=your-holding-wallet-name
 HOLDING_WALLET_ADDRESS=your-holding-wallet-ss58-address
 
 # Amount of alpha to keep in miner wallet (default: 0.0)
-# Example: Set to 10.0 to keep 10 alpha tokens in each miner wallet
-ALPHA_RESERVE_AMOUNT=10.0
+# Example: Set to 2.0 to keep 2 alpha tokens in each miner wallet
+MINER_RESERVE_ALPHA=2.0
 
 # Wallet passwords (optional)
 # Format: BT_PW__ROOT__BITTENSOR_WALLETS_<wallet-name>_COLDKEY=<password>
