complete alpha harvest mode and add bwd compatibility for stake move script

--- a/.env.sample
+++ b/.env.sample
@@ -21,8 +21,10 @@ SLIPPAGE_PRECISION=0.0001
 # The subnet ID to operate on (e.g., 19 for inference subnet)
 NETUID=19
 
-# The validator's hotkey to delegate stake to (e.g., MUV validator)
-VALIDATOR_HOTKEY=5DQ2Geab6G25wiZ4jGH6wJM8fekrm1QhV9hrRuntjBVxxKZm
+# Validator hotkeys to delegate stake to (comma-separated list)
+# Example: single validator - 5DQ2Geab6G25wiZ4jGH6wJM8fekrm1QhV9hrRuntjBVxxKZm
+# Example: multiple validators - 5DQ2Geab6G25wiZ4jGH6wJM8fekrm1QhV9hrRuntjBVxxKZm,5ABC123...
+VALIDATOR_HOTKEYS=5DQ2Geab6G25wiZ4jGH6wJM8fekrm1QhV9hrRuntjBVxxKZm
 
 # The holding wallet name and address for secure storage
 HOLDING_WALLET_NAME=your-holding-wallet-name
