add alpha harvest flags and other runtime changes

--- a/.env.sample
+++ b/.env.sample
@@ -13,9 +13,19 @@ DCA_RESERVE_TAO=10.0
 # NOTE: the balance of TAO is kept by coldkey, not hotkey (hotkeys/coldkeys may have one-to-many relationships)
 DCA_RESERVE_ALPHA=10.0
 
-# Target slippage precision in TAO (default: 0.0001)
-# Example: 0.0001 TAO = $0.05 in slippage for $500 TAO
-SLIPPAGE_PRECISION=0.0001
+# Target slippage precision in TAO (default: 0.00001)
+# Example: 0.00001 TAO = $0.005 in slippage for $500 TAO
+SLIPPAGE_PRECISION=0.00001
+
+# Minimum amount of alpha to unstake (prevents tiny transactions that fail)
+# Default: 0.1 (network minimum is usually around 0.01-0.1)
+# Transactions below this value will be skipped to avoid errors
+MIN_UNSTAKE_ALPHA=0.1
+
+# Minimum TAO deficit to consider worth processing
+# Default: 0.01 (If we're within 0.01 TAO of the target, consider it "good enough")
+# Helps prevent endless retries when we're very close to the target
+MIN_TAO_DEFICIT=0.01
 
 # Subnet settings for stake movement
 # The subnet ID to operate on (e.g., 19 for inference subnet)
